announcements package setup and homepage image edits

--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -1,3 +1,4 @@
 <section data-ng-controller="IndexController">
-  <h1 mean-token="'home-default'">This is the home view</h1>
+  <h1 mean-token="'home-default'">Welcome to Got Track Days!</h1>
+    <img src="/system/assets/img/logo.jpg" width="400" height="175" />
 </section>
