--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -1,6 +1,6 @@
 <div class="page-header" data-ng-controller="HeaderController">
   <div class="logo pull-left">
-    <a class="navbar-brand" ui-sref="home" mean-token="'site-title'">MEAN</a>
+    <a class="navbar-brand" ui-sref="home" mean-token="'site-title'"><img src="/system/assets/img/blacklogo.jpg" width="100" height="40"/></a>
   </div>
 
   <div class="left pull-left">
