--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -5,36 +5,37 @@
   <div class="alert alert-danger animated fadeIn" ng-show="usernameError">{{usernameError}}</div>
   <div class="alert alert-danger animated fadeIn" ng-show="emailError">{{emailError}}</div>
 
-  <h1>Register</h1>
+<h1 align="center"><font face="impact" size="20">account</font></h1>
+
   <form ng-submit="register()" class="signup form-horizontal">
     <div class="form-group">
-      <label for="name" class="col-md-4 control-label">Full Name</label>
+      <label for="fname" class="col-md-4 control-label">First Name:</label>
       <div class="col-md-8">
-        <input id="name" type="text" name="name" placeholder="Full name" class="form-control" ng-model="user.name"/>
+        <input id="firstname" type="text" name="name" class="form-control" ng-model="user.name"/>
       </div>
     </div>
     <div class="form-group">
-      <label for="email" class="col-md-4 control-label">Email</label>
+      <label for="lname" class="col-md-4 control-label">Last Name:</label>
       <div class="col-md-8">
-        <input id="email" type="email" name="email" placeholder="Email" class="form-control" ng-model="user.email"/>
+        <input id="lastname" type="text" name="name" class="form-control" ng-model="user.name"/>
       </div>
     </div>
     <div class="form-group">
-      <label for="username" class="col-md-4 control-label">Username</label>
+      <label for="email" class="col-md-4 control-label">Email:</label>
       <div class="col-md-8">
-        <input id="username" type="text" name="username" placeholder="Username" class="form-control" ng-model="user.username"/>
+        <input id="emailaddress" type="email" name="email" class="form-control" ng-model="user.email"/>
       </div>
     </div>
     <div class="form-group">
-      <label for="password" class="col-md-4 control-label">Password</label>
+      <label for="password" class="col-md-4 control-label">Password:</label>
       <div class="col-md-8">
-        <input id="password" type="password" name="password" placeholder="Password" class="form-control" ng-model="user.password"/>
+        <input id="password" type="text" name="password" class="form-control" ng-model="user.username"/>
       </div>
     </div>
     <div class="form-group">
-      <label for="confirmPassword" class="col-md-4 control-label">Repeat Password</label>
+      <label for="phone" class="col-md-4 control-label">Phone:</label>
       <div class="col-md-8">
-        <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Password" class="form-control" ng-model="user.confirmPassword"/>
+        <input id="phone" type="text" name="phone" class="form-control" ng-model="user.password"/>
       </div>
     </div>
     <div class="form-group">
@@ -44,4 +45,69 @@
       </div>
     </div>
   </form>
+
+    <div class="container">
+        <div class="row clearfix">
+
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6  column col-sm-offset-0 col-md-offset-2 col-lg-offset-3">
+
+                <form class="form-horizontal">
+                    <fieldset>
+
+                        <!-- First Name -->
+                        <div align="left" class="form-group">
+                            <label class="col-md-3 control-label" for="fname">First Name:</label>
+                            <div class="col-md-5">
+                                <input id="fname" name="fname" type="text" class="form-control input-md">
+                            </div>
+                            <!-- FName Checkbox -->
+                            <div class="form-group">
+                                <label class="col-md-3 control-checkbox"><input type="checkbox"></label>
+                            </div>
+                        </div>
+
+                        <!-- Last Name -->
+                        <div class="form-group">
+                            <label class="col-md-3 control-label" for="lname">Last Name:</label>
+                            <div class="col-md-8">
+                                <input id="lname" name="lname" type="text" class="form-control input-md">
+                            </div>
+                            <!-- LName Checkbox -->
+                            <div class="form-group">
+                                <label class="col-md-3 control-checkbox"><input type="checkbox"></label>
+                            </div>
+                        </div>
+
+                        <!-- Email -->
+                        <div class="form-group">
+                            <label for="email" class="col-md-3 control-label">Email:</label>
+                            <div class="col-md-8">
+                                <input id="email" type="email" name="email" class="form-control" ng-model="user.email"/>
+                            </div>
+                        </div>
+
+                        <!-- Textarea -->
+                        <div class="form-group">
+                            <label class="col-md-3 control-label" for="textarea">Text Area</label>
+                            <div class="col-md-8">
+                                <textarea class="form-control" id="textarea" name="textarea">default text</textarea>
+                            </div>
+                        </div>
+
+                        <!-- Button (Double) -->
+                        <div class="form-group">
+                            <label class="col-md-3 control-label" for="button1id"></label>
+                            <div class="col-md-8">
+                                <button id="button1id" name="button1id" class="btn btn-success">Ok</button>
+                                <button id="button2id" name="button2id" class="btn btn-danger">Cancel</button>
+                            </div>
+                        </div>
+
+                    </fieldset>
+                </form>
+            </div>
+
+        </div>
+    </div>
+
 </div>
