styling of login page completed

--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -1,104 +1,91 @@
-<link href="../assets/css/login.css" rel="stylesheet">
 <div data-ng-controller="LoginCtrl">
   <div class="alert alert-danger animated fadeIn" ng-show="loginerror">{{loginerror}}</div>
+  <div class="container">
+      <div class="omb_login">
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-
-      <div class="container">
-
-          <div class="omb_login">
-              <div class="row omb_row-sm-offset-3 omb_socialButtons">
-                  <div class="col-xs-4 col-sm-2">
-                      <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
-                          <i class="fa fa-facebook visible-xs"></i>
-                          <span class="hidden-xs">Facebook</span>
-                      </a>
-                  </div>
-                  <div class="col-xs-4 col-sm-2">
-                      <a href="#" class="btn btn-lg btn-block omb_btn-google">
-                          <i class="fa fa-google-plus visible-xs"></i>
-                          <span class="hidden-xs">Google+</span>
-                      </a>
-                  </div>
+          <div class="row omb_row-sm-offset-3 omb_socialButtons">
+              <div class="col-xs-4 col-sm-3">
+                  <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
+                      <i class="fa fa-facebook visible-xs"></i>
+                      <span class="hidden-xs">Facebook</span>
+                  </a>
               </div>
-
-              <div class="row omb_row-sm-offset-3 omb_loginOr">
-                  <div class="col-xs-12 col-sm-6">
-                      <hr class="omb_hrOr">
-                      <span class="omb_spanOr">or</span>
-                  </div>
+              <div class="col-xs-4 col-sm-3">
+                  <a href="#" class="btn btn-lg btn-block omb_btn-google">
+                      <i class="fa fa-google-plus visible-xs"></i>
+                      <span class="hidden-xs">Google+</span>
+                  </a>
               </div>
+          </div>
 
-              <div class="row omb_row-sm-offset-3">
-                  <div class="col-xs-12 col-sm-6">
+          <div class="row omb_row-sm-offset-3 omb_loginOr">
+              <div class="col-xs-12 col-sm-6">
+                  <hr class="omb_hrOr">
+                  <span class="omb_spanOr">or</span>
+              </div>
+          </div>
 
-                    <div style="padding: 20px;" id="form-olvidado">
-                          <form ng-submit="login()" class="omb_loginForm" action="" autocomplete="off" accept-charset="UTF-8" role="form" id="login-form" method="post">
-                              <fieldset>
-                                  <div class="form-group input-group">
-                                      <span class="input-group-addon">
-                                        @
-                                      </span>
-                                      <input class="form-control" ng-model="user.email" placeholder="Email" name="email" type="email" required="" autofocus="">
-                                  </div>
-                                  <div class="form-group input-group">
-                                      <span class="input-group-addon">
-                                        <i class="glyphicon glyphicon-lock">
-                                        </i>
-                                      </span>
-                                      <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" value="" required="">
-                                  </div>
-                                  <div class="form-group">
-                                      <button type="submit" class="btn btn-primary btn-block">
-                                          login
-                                      </button>
-                                      <p class="help-block">
-                                          <a class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
-                                      </p>
-                                  </div>
-                              </fieldset>
-                          </form>
-                      </div>
-                      <div style="display: none;" id="form-olvidado">
-                          <h4 class="">
-                              Forgot your password?
-                          </h4>
-                          <form accept-charset="UTF-8" role="form" id="login-recordar" method="post">
-                              <fieldset>
-                                  <span class="help-block">
-                                    Email address you use to log in to your account
-                                    <br>
-                                    We'll send you an email with instructions to choose a new password.
-                                   </span>
-                                  <div class="form-group input-group">
-                                      <span class="input-group-addon">
-                                        @
-                                      </span>
-                                      <input class="form-control" placeholder="Email" name="email" type="email" required="">
-                                  </div>
-                                  <button type="submit" class="btn btn-primary btn-block" id="btn-olvidado">
-                                      Continue
+          <div class="row omb_row-sm-offset-3">
+              <div class="col-xs-12 col-sm-6">
+                  <div style="padding: 20px;" id="form-olvidado">
+                      <form ng-submit="login()" class="omb_loginForm" action="" autocomplete="off" accept-charset="UTF-8" role="form" id="login-form" method="post">
+                          <fieldset>
+                              <div class="form-group input-group">
+                                  <span class="input-group-addon">
+                                    @
+                                  </span>
+                                  <input class="form-control" ng-model="user.email" placeholder="Email" name="email" type="email" required="" autofocus="">
+                              </div>
+                              <div class="form-group input-group">
+                                  <span class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock">
+                                    </i>
+                                  </span>
+                                  <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" value="" required="">
+                              </div>
+                              <div class="form-group">
+                                  <button type="submit" class="btn btn-primary btn-block omb_btn-default">
+                                      login
                                   </button>
-                                  <p class="help-block">
-                                      <a class="text-muted" href="#" id="acceso"><small>Account Access</small></a>
-                                  </p>
-                              </fieldset>
-                          </form>
-                      </div>
-
+                              </div>
+                              <label class="form-group">
+                                  <input type="checkbox" value="remember-me"> Remember Me
+                              </label>
+                              <a class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
+                          </fieldset>
+                      </form>
                   </div>
-              </div>
-              <div class="row omb_row-sm-offset-3">
-                  <div class="col-xs-12 col-sm-3">
-                      <label class="checkbox">
-                          <input type="checkbox" value="remember-me">Remember Me
-                      </label>
+                  <div style="display: none;" id="form-olvidado">
+                      <h4 class="">
+                          Forgot your password?
+                      </h4>
+                      <form accept-charset="UTF-8" role="form" id="login-recordar" method="post">
+                          <fieldset>
+                              <span class="help-block">
+                                Email address you use to log in to your account
+                                <br>
+                                We'll send you an email with instructions to choose a new password.
+                               </span>
+                              <div class="form-group input-group">
+                                  <span class="input-group-addon">
+                                    @
+                                  </span>
+                                  <input class="form-control" placeholder="Email" name="email" type="email" required="">
+                              </div>
+                              <button type="submit" class="btn btn-primary btn-block" id="btn-olvidado">
+                                  Continue
+                              </button>
+                              <p class="help-block">
+                                  <a class="text-muted" href="#" id="acceso"><small>Account Access</small></a>
+                              </p>
+                          </fieldset>
+                      </form>
                   </div>
               </div>
           </div>
 
       </div>
+  </div>
 </div>
 
 
