--- a/packages/system/server/views/includes/head.html
+++ b/packages/system/server/views/includes/head.html
@@ -19,6 +19,8 @@
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/modules/aggregated.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+  <link rel="stylesheet" href="/users/assets/css/login.css">
 
   <!-- Inline javascript. Can set the src /modules/aggregated.js?group=header-->
   <script type="text/javascript">{{headerJs|raw}}</script>
