--- a/packages/users/public/assets/css/login.css
+++ b/packages/users/public/assets/css/login.css
@@ -33,6 +33,8 @@
 .omb_login .omb_loginOr .omb_hrOr {
     background-color: #cdcdcd;
     height: 1px;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
 }
 .omb_login .omb_loginOr .omb_spanOr {
     display: block;
@@ -48,10 +50,22 @@
 .omb_login .omb_loginForm .input-group.i {
     width: 2em;
 }
-.omb_login .omb_loginForm  .help-block {
-    color: red;
-}
 
+.omb_login .omb_defaultButtons a {
+    color: black;
+    opacity:0.9;
+}
+.omb_login .omb_defaultButtons a:hover {
+    color: black;
+    opacity:1;
+}
+.omb_login .omb_btn-default {
+    background: #ffffff;
+    border-color: red;
+    color: #000000;
+    font-size: 22px;
+    font-family: Impact, Charcoal, sans-serif;
+}
 
 @media (min-width: 768px) {
     .omb_login .omb_forgotPwd {
