--- a/packages/users/public/assets/css/login.css
+++ b/packages/users/public/assets/css/login.css
@@ -51,6 +51,10 @@
     width: 2em;
 }
 
+.omb_login .omb_loginForm  .help-block {
+    color: red;
+}
+
 .omb_login .omb_defaultButtons a {
     color: black;
     opacity:0.9;
