--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -25,7 +25,7 @@
               </div>
           </div>
 
-          <div class="row omb_row-sm-offset-3">
+          <div data-ng-controller="Switcher" class="row omb_row-sm-offset-3">
               <div class="col-xs-12 col-sm-6">
                   <div style="padding: 20px;" id="form-olvidado">
                       <form ng-submit="login()" class="omb_loginForm" action="" autocomplete="off" accept-charset="UTF-8" role="form" id="login-form" method="post">
