--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -224,6 +224,7 @@
                             <div class="col-md-2">
                                 <button style="background-color:white; border-width:2px; border-color:red; height:50px; width:200px;"
                                         type="submit" class="btn btn-small btn-block btn"><font face="impact" size="5">submit</font></button>
+                                        <!-- &nbsp;or&nbsp;<a ui-sref='auth.login' class="show-login">login</a> -->
                             </div>
                         </div>
 
