--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -1,3 +1,4 @@
+
 <div data-ng-controller="LoginCtrl">
   <div class="alert alert-danger animated fadeIn" ng-show="loginerror">{{loginerror}}</div>
   <div class="container">
@@ -25,9 +26,9 @@
               </div>
           </div>
 
-          <div data-ng-controller="Switcher" class="row omb_row-sm-offset-3">
-              <div class="col-xs-12 col-sm-6">
-                  <div style="padding: 20px;" id="form-olvidado">
+          <div class="row omb_row-sm-offset-3">
+              <div ng-controller="SwitcherCtrl" class="col-xs-12 col-sm-6">
+                  <div data-fold-toggle="active" style="padding: 20px;">
                       <form ng-submit="login()" class="omb_loginForm" action="" autocomplete="off" accept-charset="UTF-8" role="form" id="login-form" method="post">
                           <fieldset>
                               <div class="form-group input-group">
@@ -44,25 +45,25 @@
                                   <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" value="" required="">
                               </div>
                               <div class="form-group">
-                                  <button type="submit" class="btn btn-primary btn-block omb_btn-default">
+                                  <button type="submit" class="btn btn-primary btn-block btn-default">
                                       login
                                   </button>
                               </div>
                               <label class="form-group">
                                   <input type="checkbox" value="remember-me"> Remember Me
                               </label>
-                              <a class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
+                              <a ng-click="active=!active" class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
                           </fieldset>
                       </form>
                   </div>
-                  <div style="display: none;" id="form-olvidado">
+                  <div data-fold-toggle="active" style="display: none;">
                       <h4 class="">
                           Forgot your password?
                       </h4>
                       <form accept-charset="UTF-8" role="form" id="login-recordar" method="post">
                           <fieldset>
                               <span class="help-block">
-                                Email address you use to log in to your account
+                                Input the email address you use to log in to your account
                                 <br>
                                 We'll send you an email with instructions to choose a new password.
                                </span>
@@ -72,11 +73,11 @@
                                   </span>
                                   <input class="form-control" placeholder="Email" name="email" type="email" required="">
                               </div>
-                              <button type="submit" class="btn btn-primary btn-block" id="btn-olvidado">
-                                  Continue
+                              <button type="submit" class="btn btn-primary btn-block btn-default" id="btn-olvidado">
+                                  continue
                               </button>
                               <p class="help-block">
-                                  <a class="text-muted" href="#" id="acceso"><small>Account Access</small></a>
+                                  <a ng-click="active=!active" class="pull-right text-muted"  href="#" id="acceso"><small>Account Access</small></a>
                               </p>
                           </fieldset>
                       </form>
