--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -27,8 +27,8 @@
           </div>
 
           <div class="row omb_row-sm-offset-3">
-              <div ng-controller="SwitcherCtrl" class="col-xs-12 col-sm-6">
-                  <div data-fold-toggle="active" style="padding: 20px;">
+              <div ng-controller="SwitcherCtrl" class="col-xs-12 col-sm-6"">
+                  <div data-fold-toggle="active" style="padding: 20px; padding-top: 35px">
                       <form ng-submit="login()" class="omb_loginForm" action="" autocomplete="off" accept-charset="UTF-8" role="form" id="login-form" method="post">
                           <fieldset>
                               <div class="form-group input-group">
@@ -56,14 +56,14 @@
                           </fieldset>
                       </form>
                   </div>
-                  <div data-fold-toggle="active" style="display: none;">
+                  <div data-fold-toggle="active" style="display: none; padding: 20px; padding-top: 0px">
                       <h4 class="">
                           Forgot your password?
                       </h4>
                       <form accept-charset="UTF-8" role="form" id="login-recordar" method="post">
                           <fieldset>
                               <span class="help-block">
-                                Input the email address you use to log in to your account
+                                Input the email address you use to log in to your account.
                                 <br>
                                 We'll send you an email with instructions to choose a new password.
                                </span>
@@ -77,7 +77,7 @@
                                   continue
                               </button>
                               <p class="help-block">
-                                  <a ng-click="active=!active" class="pull-right text-muted"  href="#" id="acceso"><small>Account Access</small></a>
+                                  <a ng-click="active=!active" class="pull-right text-muted"  href="#" id="acceso"><small>Return to Login</small></a>
                               </p>
                           </fieldset>
                       </form>
