some positioning adjustments... also forgot to mention that css was added for buttons

--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -27,7 +27,7 @@
           </div>
 
           <div class="row omb_row-sm-offset-3">
-              <div ng-controller="SwitcherCtrl" class="col-xs-12 col-sm-6"">
+              <div ng-controller="SwitcherCtrl" class="col-xs-12 col-sm-6">
                   <div data-fold-toggle="active" style="padding: 20px; padding-top: 35px">
                       <form ng-submit="login()" class="omb_loginForm" action="" autocomplete="off" accept-charset="UTF-8" role="form" id="login-form" method="post">
                           <fieldset>
@@ -50,13 +50,13 @@
                                   </button>
                               </div>
                               <label class="form-group">
-                                  <input type="checkbox" value="remember-me"> Remember Me
+                                  <input type="checkbox" value="remember-me" checked> Remember Me
                               </label>
                               <a ng-click="active=!active" class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
                           </fieldset>
                       </form>
                   </div>
-                  <div data-fold-toggle="active" style="display: none; padding: 20px; padding-top: 0px">
+                  <div data-fold-toggle="active" style="display: none; padding: 20px; padding-top: 0">
                       <h4 class="">
                           Forgot your password?
                       </h4>
