some visual elements added, such as focus glow and new fb/g+ login buttons

--- a/packages/system/public/assets/css/input.css
+++ b/packages/system/public/assets/css/input.css
@@ -13,3 +13,9 @@
     color: black;
     opacity: 1;
 }
+
+.glowing-border:focus {
+    outline: none;
+    border-color: gray;
+    box-shadow: 0 0 10px gray;
+}
