edits for account registration page

--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -11,7 +11,7 @@
               <form class="form-horizontal">
                   <fieldset>
 
-                      <h2><font face="impact" size="20">account</font></h2>
+                      <h2 align="center"><font face="impact" size="20">account</font></h2>
 
                       <!-- First Name -->
                       <div align="left" class="form-group">
@@ -156,9 +156,11 @@
                                   <option value="VA">VA</option><option value="WA">WA</option><option value="WV">WV</option>
                                   <option value="WI">WI</option><option value="WY">WY</option>
                               </select>
-                              </div>
-                          <div class="col-md-2">
+                          </div>
+                          <div class="col-md-1">
                               <label class="col-md-0 control-label" for="city">Zip:</label>
+                          </div>
+                          <div class="col-md-2">
                           <input id="zip" type="text" name="zip" class="form-control" ng-model="user.zip"/>
                       </div>
                       </div>
@@ -179,7 +181,7 @@
   </form>
 
     <!-- Horizontal Line -->
-    <HR>
+    <HR width="1200">
 
     <form ng-submit="register()" class="signup form-horizontal">
         <div class="container">
@@ -187,7 +189,7 @@
                 <form class="form-horizontal">
                     <fieldset>
 
-                        <h2><font face="impact" size="20">emergency contact</font></h2>
+                        <h2 align="center"><font face="impact" size="20">emergency contact</font></h2>
 
                         <!-- First Name -->
                         <div align="left" class="form-group">
