--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -4,15 +4,15 @@
   <div class="container">
       <div class="omb_login">
 
-          <div class="row omb_row-sm-offset-3 omb_socialButtons">
+          <div class="row omb_row-sm-offset-3 omb_login omb_socialButtons">
               <div class="col-xs-4 col-sm-3">
-                  <a href="#">
-                      <img src="/system/assets/img/fblogin.png" class="btn btn-lg btn-block">
+                  <a href="/auth/facebook" class="btn btn-lg btn-block">
+                      <img width="240px" src="/system/assets/img/fblogin.png">
                   </a>
               </div>
               <div class="col-xs-4 col-sm-3">
-                  <a href="#">
-                      <img src="/system/assets/img/g+login.png" class="btn btn-lg btn-block">
+                  <a href="/auth/google" class="btn btn-lg btn-block">
+                      <img width="240px" src="/system/assets/img/g+login.png">
                   </a>
               </div>
           </div>
