--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -1,27 +1,38 @@
-<div class="" data-ng-controller="AnnouncementsController">
-  <h1>Example view from your new awesome package</h1>
-  <h2>Package: {{package.name}}</h2>
-  <ol>
-    <li>
-      <a href="announcements/example/anyone">Server route that anyone can access</a>
-    </li>
-    <li>
-      <a href="announcements/example/auth">Server route that requires authentication</a>
-    </li>
-    <li>
-      <a href="announcements/example/admin">Server route that requires admin user</a>
-    </li>
-    <li>
-      <a href="announcements/example/render">Raw Html rendering example from using swig</a>
-    </li>
-  </ol>
-  <h3><img src="/announcements/assets/img/logo.png" /></h3>
-  </br>
-  <p class="alert alert-info">You can find your package in /packages/announcements</p>
-  </br>
-  <p class="alert alert-warning">MEAN versions prior to 0.3.2 will be in /node_modules/announcements</p>
-  </br>
-  <h3><a href="http://www.mean.io/#!/docs">Documentation</a></h3>
-  </br>
+<div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
+  <h1>Announcements</h1>
+    <div class="container">
+        <div class="col-md-12">
+            <h1>{{announcements.newsTitle}}</h1>
+            <p>{{announcements.newsBody}}</p>
+            <div>
+                <span class="badge">Posted {{announcements.newsEditedDate}} {{announcements.newsEnteredTime}}</span>
+                <!--<div class="pull-right">
+                    <span class="label label-default">alice</span>
+                    <span class="label label-primary">story</span>
+                    <span class="label label-success">blog</span>
+                    <span class="label label-info">personal</span>
+                    <span class="label label-warning">Warning</span>
+                    <span class="label label-danger">Danger</span>
+                </div>-->
+            </div>
+            <div data-ng-if="hasAuthorization(announcement)">
+                <a class="btn" href="/#!/announcements/{{announcements._id}}/edit">
+                    <i class="glyphicon glyphicon-edit"></i>
+                </a>
+                <a class="btn" data-ng-click="remove(announcement);">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
+            </div>
+            <hr>
+<!--            <h1>Announcement 2</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus, urna vel scelerisque pretium, ante est consectetur risus, nec maximus purus enim et nisl.</p>
+            <div>
+                <span class="badge">Posted 2012-08-02 20:47:04</span><div class="pull-right"><span class="label label-default">alice</span> <span class="label label-primary">story</span> <span class="label label-success">blog</span> <span class="label label-info">personal</span> <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span></div>
+            </div>
+            <hr>-->
+        </div>
+    </div>
 </div>
+
 
