--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -1,38 +1,96 @@
-<div class="page-header" data-ng-controller="HeaderController">
-  <div class="logo pull-left">
-    <a class="navbar-brand" ui-sref="home" mean-token="'site-title'"><img src="/system/assets/img/blacklogo.jpg" width="100" height="40"/></a>
-  </div>
+<!--<div class="page-header" data-ng-controller="HeaderController">
 
-  <div class="left pull-left">
-    <ul class="navbar-nav nav">
-      <li data-ng-repeat="item in menus.main" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
-        <a mean-token="item.link" ui-sref='{{item.link}}'>{{item.title}}</a>
-      </li>
-    </ul>
-  </div>
 
-  <div class="account">
-    <div class="text-edit">
-      <div class="pull-right" data-ng-show="global.authenticated" mean-token-editable></div>
-      <div class="pull-right" data-ng-show="global.authenticated" mean-translate></div>
-    </div>
-    <ul class="navbar-nav nav" data-ng-hide="global.authenticated">
-      <li><a ui-sref='auth.register'>Register</a>
-      </li>
-      <li class="divider-vertical"></li>
-      <li><a ui-sref='auth.login'>Login</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav nav" data-ng-show="global.authenticated">
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          {{global.user.name}} <b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="/logout">Sign out</a>
-          </li>
+
+  <nav class="navbar-nav" role="navigation">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">events</a></li>
+          <li><a href="#">faq</a></li>
+          <li><a ui-sref="home" mean-token="'site-title'"><img style="margin-top: -10px" src="/system/assets/img/blacklogo.jpg" width="140" height="60"/></a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">contact</a></li>
+          <li class="navbar-right" data-ng-hide="global.authenticated"><a ui-sref='auth.login'>login</a></li>
         </ul>
-      </li>
-    </ul>
-  </div>
+      </div>
+
+  </nav>
 </div>
+-->
+
+ <!--
+ <div class="page-header" data-ng-controller="HeaderController">
+    <div class="container">
+
+      <ul class="nav navbar-nav">
+        <li><a href="#">events</a></li>
+        <li><a href="#">faq</a></li>
+      </ul>
+
+        <li class="nav navbar-nav navbar-brand-centered"><a ui-sref="home" mean-token="'site-title'"><img style="" src="/system/assets/img/blacklogo.jpg" width="120" height="50"/></a></li>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">about</a></li>
+        <li><a href="#">contact</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav pull-right">
+        <li><a ui-sref='auth.login'>Login</a></li>
+      </ul>
+
+    </div>
+  </div>
+-->
+
+
+
+
+
+
+<!--<div class="page-header" data-ng-controller="HeaderController">
+<div class="logo pull-left">
+<a class="navbar-brand" ui-sref="home" mean-token="'site-title'"><img src="/system/assets/img/blacklogo.jpg" width="100" height="40"/></a>
+</div>
+
+<div class="left pull-left">
+<ul class="navbar-nav nav">
+<li data-ng-repeat="item in menus.main" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
+<a mean-token="item.link" ui-sref='{{item.link}}'>{{item.title}}</a>
+</li>
+</ul>
+</div>
+
+<div class="account">
+<div class="text-edit">
+<div class="pull-right" data-ng-show="global.authenticated" mean-token-editable></div>
+<div class="pull-right" data-ng-show="global.authenticated" mean-translate></div>
+</div>
+<ul class="navbar-nav nav" data-ng-hide="global.authenticated">
+<li><a ui-sref='auth.register'>Register</a>
+</li>
+<li class="divider-vertical"></li>
+<li><a ui-sref='auth.login'>Login</a>
+</li>
+</ul>
+<ul class="navbar-nav nav" data-ng-show="global.authenticated">
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+  {{global.user.name}} <b class="caret"></b>
+</a>
+<ul class="dropdown-menu">
+  <li><a href="/logout">Sign out</a>
+  </li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+-->
