updating front end services for announcements.

--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -1,16 +1,16 @@
 <div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
   <h2>
       <a class="btn" data-ng-click="open()">
-          <i class="glypicon glyphicon-plus-sign"></i>
+          <i class="glyphicon glyphicon-plus-sign"></i>
       </a>
       Announcements
   </h2>
     <div class="container">
-        <div class="col-md-12">
-            <h3>{{announcements.newsTitle}}</h3>
-            <p>{{announcements.newsBody}}</p>
+        <div class="col-md-12" data-ng-repeat="announcement in announcements">
+            <h3>{{announcement.newsTitle}}</h3>
+            <p>{{announcement.newsBody}}</p>
             <div>
-                <span class="badge">Posted {{announcements.newsEditedDate}} {{announcements.newsEditedTime}}</span>
+                <span class="badge">Posted {{announcement.newsEditedDate}} {{announcement.newsEditedTime}}</span>
             </div>
             <div data-ng-if="hasAuthorization(announcement)">
                 <a class="btn" href="/#!/announcements/{{announcements._id}}/edit">
