separated the navbar css styling from the default.css file and added it to the head file.

--- a/packages/system/server/views/includes/head.html
+++ b/packages/system/server/views/includes/head.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link rel="stylesheet" href="/users/assets/css/login.css">
   <link rel="stylesheet" href="/system/assets/css/default.css">
+  <link rel="stylesheet" href="/system/assets/css/navbar.css">
 
   <!-- Inline javascript. Can set the src /modules/aggregated.js?group=header-->
   <script type="text/javascript">{{headerJs|raw}}</script>
