--- a/packages/users/public/views/index.html
+++ b/packages/users/public/views/index.html
@@ -1,16 +1,4 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-md-offset-1 col-md-5">
-      <a href="/auth/facebook">
-        <img src="/users/assets/img/icons/facebook.png"/>
-      </a>
-
-      <a href="/auth/google">
-        <img src="/users/assets/img/icons/google.png"/>
-      </a>
-    </div>
-  </div>
--->
+<div class="container">
   <div class="row">
     <div class="col-md-6">
       <div ui-view></div>
