--- a/packages/system/server/views/layouts/default.html
+++ b/packages/system/server/views/layouts/default.html
@@ -3,7 +3,7 @@
 {% include '../includes/head.html' %}
 
 <body ng-cloak class="ng-cloak">
-    <div class="navbar navbar-inverse navbar-fixed-top" data-ng-include="'/system/views/header.html'" data-role="navigation"></div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" data-ng-include="'/system/views/header.html'" data-role="navigation"></nav>
     {% if adminEnabled %}
     <section class="admin-menu">
         <div data-ng-include="'/mean-admin/views/index.html'"></div>
