--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -34,9 +34,11 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 {{global.user.name}} <b class="caret"></b>
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/logout">Sign out</a>
-                                </li>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">My Account</a></li>
+                                <li><a href="#">My Virtual Garage</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/logout">Log out</a></li>
                             </ul>
                         </li>
                     </ul>
