registration page push

--- a/packages/users/public/views/forgot-password.html
+++ b/packages/users/public/views/forgot-password.html
@@ -3,7 +3,9 @@
   <h1>Forgot Password</h1>
   <form ng-submit="forgotpassword()" class="forgot-password form-horizontal">
     <div class="form-group">
-      <label for="email" class="forgot-email"> Enter your email address or username below and we will send you password reset instructions.</label>
+        <hr>
+      <label for="email" class="forgot-email"> Enter your email address you use to log into your account.</label>
+        <label for="email" class="forgot-email"> We'll send you an email with instructions to choose a new password.</label>
       <div class="form-group">
         <input id="text" type="text" name="text" class="form-control" ng-model="text"/>
       </div>
