--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -1,10 +1,14 @@
 <div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
   <h2>
-      <a class="btn" data-ng-click="open()">
+      Announcements
+      <a class="btn" href="/#!/announcements/create">
           <i class="glyphicon glyphicon-plus-sign"></i>
       </a>
-      Announcements
   </h2>
+    <select name="sort" data-ng-model="sort" id="sort">
+        <option value="10perPage">10 per page</option>
+        <option value="20perPage">20 per page</option>
+    </select>
     <div class="container">
         <div class="col-md-12" data-ng-repeat="announcement in announcements">
             <h3>{{announcement.newsTitle}}</h3>
@@ -12,14 +16,14 @@
             <div>
                 <span class="badge">Posted {{announcement.newsEditedDate}} {{announcement.newsEditedTime}}</span>
             </div>
-            <div data-ng-if="hasAuthorization(announcement)">
+            <!--<div data-ng-if="hasAuthorization(announcement)">-->
                 <a class="btn" href="/#!/announcements/{{announcements._id}}/edit">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
                 <a class="btn" data-ng-click="remove(announcement);">
                     <i class="glyphicon glyphicon-remove-circle"></i>
                 </a>
-            </div>
+            <!--</div>-->
             <hr>
         </div>
     </div>
