--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -8,28 +8,30 @@
         </div>
 
         <div class="navbar-collapse collapse" data-ng-controller="ActiveCtrl">
-            <div style="float:left; width: 40%;">
-                <ul style="text-align:right" class="nav navbar-nav">
-                    <li ng-class="{'is-active': isActive('/events')}"><a ui-sref='events'>events</a></li>
-                    <li ng-class="{'is-active': isActive('/faq')}"><a ui-sref='faq'>faq</a></li>
-                </ul>
+            <div class="navbar-left">
+                <div class="pull-right">
+                    <ul class="nav navbar-nav">
+                        <li ng-class="{'is-active': isActive('/events')}"><a ui-sref='events'>events</a></li>
+                        <li ng-class="{'is-active': isActive('/faq')}"><a ui-sref='faq'>faq</a></li>
+                    </ul>
+                </div>
             </div>
-            <div style="float:left; width: 20%;">
+            <div class="navbar-center">
                 <a ui-sref="home" mean-token="'site-title'"><img src="/system/assets/img/blacklogo.jpg" width="140" height="60"/></a>
             </div>
-            <div style="float:left; width: 40%;">
-                <div style="float:left;">
-                    <ul style="text-align:left" class="nav navbar-nav">
+            <div class="navbar-right">
+                <div class="pull-left">
+                    <ul class="nav navbar-nav">
                         <li ng-class="{'is-active': isActive('/about')}"><a href="#">about</a></li>
                         <li ng-class="{'is-active': isActive('/contact')}"><a href="#">contact</a></li>
                         <li data-ng-hide="global.authenticated"><a href="#">tools</a></li>
                     </ul>
                 </div>
-                <div class="navbar-right">
-                    <ul style="text-align:right" class="navbar-nav nav" data-ng-hide="global.authenticated">
+                <div class="pull-right">
+                    <ul class="navbar-nav nav" data-ng-hide="global.authenticated">
                         <li><a ui-sref='auth.login'>login</a></li>
                     </ul>
-                    <ul style="text-align:right" class="navbar-nav nav" data-ng-show="global.authenticated">
+                    <ul class="navbar-nav nav" data-ng-show="global.authenticated">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 {{global.user.name}} <b class="caret"></b>
