--- a/packages/system/public/assets/css/default.css
+++ b/packages/system/public/assets/css/default.css
@@ -1,8 +1,9 @@
+/* button css */
 .btn-default {
     background: #ffffff;
     border-color: red;
-    color: #000000;
     font-size: 22px;
+    color: #080808;
     font-family: Impact, Charcoal, sans-serif;
     opacity: 0.9;
 }
@@ -10,15 +11,18 @@
 .btn-default:hover {
     border-color: red;
     background: #f5f5f5;
-    color: black;
+    color: #080808;
     opacity: 1;
 }
 
+/* input css */
 .glowing-border:focus {
     outline: none;
     border-color: lightgray;
     box-shadow: 0 0 10px lightgray;
 }
+
+/* table css */
 .table {
     table-layout: fixed;
 }
@@ -31,6 +35,6 @@
     background-color: #f5f5f5;
 }
 .table-search {
-    width: 50%;
+    width: 30%;
     min-width: 250px;
 }    
