added a border for the navigation bar with some shadow

--- a/packages/system/public/assets/css/navbar.css
+++ b/packages/system/public/assets/css/navbar.css
@@ -24,6 +24,11 @@
     padding-left: 20px;
     margin-left: 0;
 }
+.nav-border {
+    border-bottom: medium;
+    border-color: gray;
+    box-shadow: 0 0 10px black;
+}
 
 /* link */
 .navbar .navbar-nav > li > a {
