--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -1,4 +1,4 @@
-    <div class="container-fluid" data-ng-controller="HeaderController">
+    <div class="container-fluid nav-border" data-ng-controller="HeaderController">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse">
                 <span class="icon-bar"></span>
