--- a/packages/system/public/views/faq.html
+++ b/packages/system/public/views/faq.html
@@ -8,8 +8,8 @@
         <accordion-group ng-repeat="group in groups" is-open="group.expanded">
             <accordion-heading>
                 <span class="glyphicon pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
-                <span class="pull-left glyphicon-plus" style="color: transparent"></span>
-                <strong>{{group.title}}</strong>
+                <span class="pull-left glyphicon-asterisk glyphicon-space"></span>
+                <strong class="valign-middle">{{group.title}}</strong>
                 <!--<span class="glyphicon glyphicon-remove-circle pull-right" style="color: red" ng-click="removeGroup(group)"></span>-->
             </accordion-heading>
             {{group.content}}
