--- a/packages/system/public/assets/css/default.css
+++ b/packages/system/public/assets/css/default.css
@@ -1,3 +1,11 @@
+/*  */
+.page-title {
+    font-size: 40px;
+    color: #080808;
+    font-family: Impact, Charcoal, sans-serif;
+    text-align: center;
+}
+
 /* button css */
 .btn-default {
     background: #ffffff;
