removed some styling

--- a/packages/system/public/views/faq.html
+++ b/packages/system/public/views/faq.html
@@ -1,5 +1,5 @@
 <div class="container" ng-controller="AccordionCtrl">
-    <img style="display: block; margin-left: auto; margin-right: auto" src="/system/assets/img/logo.jpg" width="400" height="175" />
+    <img class="center-block" src="/system/assets/img/logo.jpg" width="400" height="175" />
     <label class="checkbox">
         <input type="checkbox" ng-model="oneAtATime">
         Open only one at a time
